# Sistemas-Operativos

./: .gitignore  CMakeLists.txt  README.md
cli/: commands.cpp  commands.h  main.cpp
docs/: architecture.md  index.md
docs/modules/CPU/: cpu.md
docs/modules/IO/: io.md
docs/modules/disk/: disk.md
docs/modules/memory/: memory.md
kernel/: core.cpp  core.h  process.h  scheduler.cpp  scheduler.h  sync.cpp  sync.h
modules/mem/: memory_manager.cpp  memory_manager.h  page_table.cpp  page_table.h
scripts/: mem.txt
tests/: test_integration.cpp
